# payx

./: .env.example  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: cd.yml  ci.yml  docs.yml  release.yml  security.yml
crates/payx-cli/: Cargo.toml
crates/payx-cli/src/: client.rs  config.rs  main.rs  output.rs
crates/payx-cli/src/commands/: account.rs  business.rs  mod.rs  transaction.rs  webhook.rs
crates/payx-server/: Cargo.toml
crates/payx-server/migrations/: 20241217000001_initial.sql
crates/payx-server/src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
crates/payx-server/src/api/: routes.rs
crates/payx-server/src/api/handlers/: accounts.rs  businesses.rs  health.rs  mod.rs  transactions.rs  webhooks.rs
crates/payx-server/src/api/middleware/: auth.rs  rate_limit.rs
crates/payx-server/src/domain/: account.rs  api_key.rs  business.rs  mod.rs  transaction.rs  webhook.rs
crates/payx-server/src/workers/: mod.rs  webhook_processor.rs
crates/payx-server/tests/: transfer_test.rs
crates/payx-server/tests/integration/: transfer_test.rs
docker/grafana/provisioning/datasources/: datasources.yaml
docker/loki/: loki.yaml
docker/promtail/: promtail.yaml
docker/tempo/: tempo.yaml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: accounts.md  authentication.md  businesses.md  errors.md  transactions.md  webhooks.md
docs/src/architecture/: database.md  overview.md  transactions.md  webhooks.md
docs/src/getting-started/: cli.md  configuration.md  quick-start.md  testing.md
docs/src/operations/: deployment.md  observability.md
k8s/argocd/: README.md  application.yaml
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
k8s/overlays/production/: deployment-patch.yaml  kustomization.yaml
