[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sachin Beniwal <sachinbeniwal0101@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/benodiwal/payx"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-str"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"

[profile.release]
lto = true
codegen-units = 1