[package]
name = "payx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "payx"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
anyhow.workspace = true

clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
dirs = "5"
home = "=0.5.9"  # Pin to avoid 0.5.12 which requires Rust 1.88
colored = "2"
tabled = "0.16"
