[package]
name = "payx-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "payx-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "timeout", "compression-gzip"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }

argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

reqwest = { version = "0.12", features = ["json"] }

tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["tonic"] }
tracing-opentelemetry = "0.25"

dotenvy = "0.15"

[dev-dependencies]
testcontainers = "0.21"
testcontainers-modules = { version = "0.9", features = ["postgres"] }
